# snake-ratatui

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  rust.yml
src/: game.rs  main.rs  ui.rs
src/utils/: collectables.rs  enums.rs  helpers.rs  mod.rs  scores.rs
