[package]
name = "snake-ratatui"
version = "0.0.3"
edition = "2024"
repository = "https://github.com/BenRedblock/snake-ratatui"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
